Maquetación 80% y desarrollo de sass

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="shortcut icon" type="image/x-icon" href="img/GD17_Favicon_192.png">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
-	  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono|Open+Sans:300" rel="stylesheet">
     <body>
 		<div class="container">
 			<header class="row top">
@@ -50,17 +50,293 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 image-fifty">
           <h3>Newsfeed</h3>
-          <h5 class="grey">22/06/2017</h5>
-          <h3 class="roboto">A New and Improved Google Design</h3>
+          <h5 class="mono-font">22/06/2017</h5>
+          <h3 class="roboto">
+						A New and Improved Google Design
+					</h3>
+					<img src="img/GoogleDesign.jpg" alt="Google"/>
+					<p>
+						We've got a fresh, new look! Now it's easier than ever to find the articles, news, and tools you love right from the homepage. Take a few minutes to explore our new story collections for in-depth insights on everything from branding to SPAN, and visit our new and improved jobs page to find out what it's really like to work with us. We've got a few more surprises in store, so sign up for our newsletter and keep an eye on design.google…
+					</p>
+        </div>
+				<div class="col-6">
+					<h5 class="mono-font">22/06/2017</h5>
+          <h3 class="roboto">
+						Join the Material Gallery Early Adopter Program.
+					</h3>
+					<p>
+						Like staying ahead of the curve when it comes to design tools? Meet Gallery, a design collaboration app that makes it easy to find, present, and discuss work from a shared, central place. Brought to you by the Material Design...
+					</p><br>
+					<h5 class="mono-font">22/06/2017</h5>
+          <h3 class="roboto">
+						Google Design Medium Round-Up
+					</h3>
+					<p>
+						Check out a handful of our latest and greatest Medium articles: Learn how Google redesigned over 2,000 emoji to make them more expressive than ever; Watch the top design talks from I/O 2017 in our Definitive Design Guide...
+					</p><br>
+					<h5 class="mono-font">22/06/2017</h5>
+          <h3 class="roboto">
+						Material Components for Android, iOS, and the Web
+					</h3>
+					<p>
+						Making Material just got easier. The new Material Components site features a library of components and expanded documentation that let you build easily for Android, iOS, and the web using open-source code. The…
+					</p>
+				</div>
+				<div class="col-6 box-text">
+					<div class="col-10">
+						<p>
+							Want to stay up-to-date with Google Design?
+						</p>
+						<a href="https://services.google.com/fb/forms/google-design-updates/">
+							Sign up for our Newsletter
+						</a>
+					</div>
+					<div class="col-1">
+						<img src="img/gdlogo.png" alt="">
+					</div>
+				</div>
+				<div class="col-12">
+          <hr>
         </div>
       </div>
+				<div class="col-6 image-fifty">
+					<img src="img/connectivity.jpg" alt="Google"/>
+          <h3 class="roboto">
+						Connectivity, Culture, and Credit
+					</h3>
+					<p>
+						Nine ways designers can be more empathic and effective when creating products for emerging markets
+					</p>
+					<h5 class="mono-font">GUIDE</h5>
+					<br>
+					<img src="img/building.jpg" alt="Google"/>
+          <h3 class="roboto">
+						Building Better Design Culture
+					</h3>
+					<p>
+						A conversation with Google’s Mike Buzzard on creativity, career advancement, and criteria for success
+					</p>
+					<h5 class="mono-font">EDITORIAL</h5>
+					<br>
+					<img src="img/daydream.jpg" alt="Google"/>
+          <h3 class="roboto">
+						Speaking Volumes
+					</h3>
+					<p>
+						Best practices for designing a brand in VR
+					</p>
+					<h5 class="mono-font">Case Studio</h5>
+				</div>
+				<div class="col-6 image-fifty">	
+					<img src="img/170612_IO.png" alt="Google"/>
+          <h3 class="roboto">
+						I/O 2017 Design Coverage
+					</h3>
+					<p>
+						Get the most out of #io17 with our guide to designer-focused events and talks
+					</p>
+					<div class="row">
+						<div class="col-1 medium">
+							<img src="img/icon-redirection.png" alt="got to" width="5">
+						</div>
+						<div class="col-2">	
+							<h5 class="mono-font">
+								medium.com
+							</h5>
+						</div>
+					</div>
+				<br>
+					<img src="img/agi_3x2.jpg" alt="Google"/>
+          <h3 class="roboto">
+						Seoul: Printed Matter, Politics, and Performance
+					</h3>
+					<p>
+						Four studios talk about the current design scene in South Korea’s capital
+					</p>
+					<div class="row">
+						<div class="col-1 medium">
+							<img src="img/icon-redirection.png" alt="got to">
+						</div>
+						<div class="col-2">	
+							<h5 class="mono-font">
+								medium.com
+							</h5>
+						</div>
+					</div>
+					<br>
+					<hr>
+					<br>
+					<h3 class="sans medium-font-size">
+						We used the guidelines as an inspiration to go further, and spent a lot of time considering what they meant and how to put them into practice.
+					</h3><br>
+					<div class="row">
+						<div class="col-2 medium">
+							<div class="col-12">	
+								<img src="img/asana_mEkIk1i.jpg" alt="asana">
+							</div>
+						</div>
+						<div class="col-6 small-font-size">	
+							<p>Sarah Chandler</p>
+							<p>Asana: Productivity with Personality</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-12">
+      		<hr>
+      	</div>
+				<!--Section-->
+				<div class="row">
+					<div class="col-4">
+						<h2>Brand recognition</h2>
+						<br>
+						<p class="medium-font-size">
+							From VR to hardware, this collection of articles will guide and inspire you to do your best branding work
+						</p>
+					</div>
+					<div class="col-4 image-fifty">
+						<img src="img/daydream.jpg" alt="Google"/>
+          	<h3 class="roboto">Speaking Volumes</h3>
+						<p>
+							Best practices for designing a brand in VR
+						</p>
+						<h5 class="mono-font">Case Studio</h5>
+					</div>
+					<div class="col-4 image-fifty">
+						<img src="img/expressing.jpg" alt="Google"/>
+          	<h3 class="roboto">Expressing Brand in Material</h3>
+						<p>
+							A step-by-step guide to staying on brand while going Material
+						</p>
+						<h5 class="mono-font">Editorial</h5>
+						<div class="col-8-offset col-4">
+							<div class="col-2-offset col-10">
+								<img src="img/arrow.png" alt="">
+							</div>
+						</div>
+					</div>
+						<div class="col-12">
+							<hr>
+						</div>
+				</div>
+				<!--Section-->
+					<div class="row">
+						<div class="col-6 image-fifty">
+							<img src="img/sticky.jpg" alt="">
+							<h3 class="sans">Sticky Conversations</h3>
+							<p>
+								Allo sticker sets balance the universal and unique
+							</p>
+							<h5 class="mono-font">Case Study</h5>
+							<br>
+							<img src="img/tokyo.jpg" alt="">
+							<h3 class="sans">Guide to SPAN Tokyo</h3>
+							<p>
+								Watch archived video from our Tokyo event and get to know each of the speakers, including Deyan Sudjic, Mariya Suzuki, and Keiichi Tanaami
+							</p>
+							<h5 class="mono-font">GUIDE</h5>
+							<br>
+							<hr>
+							<br>
+							<p class="medium-font-size">
+								As the playful dots animate into Google’s signature G, the subtle piano sound resolves into a G chord to match.
+							</p>
+							<div class="col-2">
+								<div class="col-12">
+									<img src="img/conor-o-sullivan.png" alt="">
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="col-12">
+									<p class="small-font-size">
+										Conor O'Sullivan
+										Sound and Vision
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-6 image-fifty">
+							<img src="img/digital.jpg" alt="">
+							<h3 class="sans">Expressing Brand in Material</h3>
+							<p>
+								A step-by-step guide to staying on brand while going Material
+							</p>
+							<h5 class="mono-font">Editorial</h5>
+							<br>
+							<img src="img/airbnb.jpg" alt="">
+							<h3 class="sans">Airbnb: Communicating Clarity and Charm</h3>
+							<p>
+								How a trusted travel app plays host to a growing, global community
+							</p>
+							<h5 class="mono-font">Case Study</h5>
+							<br>
+							<img src="img/volume_two.jpg" alt="">
+							<h3>
+								Volume Two
+							</h3>
+							<p>
+								Explore the visual, virtual, and written culture of Tokyo and Los Angeles through the work of our SPAN 2016 speakers
+							</p>
+							<h5 class="mono-font">Editorial</h5>
+						</div>
+						<div class="col-12">
+							<hr>
+						</div>
+					</div><!--Fin row section-->
+					<div class="row">
+						<div class="col-12">
+							<h3 class="sans">The Latest</h3>
+						</div>
+						<div class="col-4 image-fifty">
+							<img class="top" src="img/library_scroll.jpg" alt="">
+							<p class="top">
+								Get to know the ✨🆕✨ #GoogleDesign: Start with our 📚, it’s chock full of stories, guides & inspo to 🚀 your projects: http://design.google/library
+							</p>
+							<div class="col-2 image-fifty">
+								<img src="img/dezeen_twitter-bird.gif" alt="">
+							</div>
+						</div>
+						<div class="col-4 image-fifty">
+							<img class="top" src="img/gallery_present_2to1.png" alt="">
+							<p class="top">
+								Like staying ahead of the curve when it comes to design tools? Meet Gallery, a design collaboration app that makes it easy to find, present, and discuss work from a shared, central place.
+							</p>
+							<div class="col-2 image-fifty">
+								<img src="img/fb.png" alt="">
+							</div>
+						</div>
+						<div class="col-4 image-fifty">
+							<img class="top" src="img/Method.png" alt="">
+							<p class="top">
+								👂 to the debut of our new podcast → Method! In Ep1 @Aidan_simpson interviews @jaylovespie on @projectfi & lots more: http://goo.gl/FPW7Kr
+							</p>
+							<div class="col-2 image-fifty">
+								<img src="img/dezeen_twitter-bird.gif" alt="">
+							</div>
+						</div>
+						<div class="col-11-offset col-1">
+							<div class="col-2-offset col-10">
+								<img src="img/arrow.png" alt="">
+							</div>
+						</div>
+					</div>
+						<div class="col-12">
+							<hr>
+						</div>
+					</div><!--Fin section-->
+					<!--Section-->
+					<div class="row">
+						<div class="col-6 image-fifty">
+							<img src="img/span" alt="">
+						</div>
+						<div class="col-6 image-fifty">
 
-        	<footer>
-
-        	</footer>
+						</div>
+					</div>
+			
+			
 		</div>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   
     </body>
 </html>
