--- a/index.html
+++ b/index.html
@@ -324,19 +324,74 @@
 						<div class="col-12">
 							<hr>
 						</div>
-					</div><!--Fin section-->
-					<!--Section-->
 					<div class="row">
 						<div class="col-6 image-fifty">
-							<img src="img/span" alt="">
+							<img src="img/span.jpg" alt="">
+							<h3 class="sans">SPAN 2016: Los Angeles</h3>
+							<p>
+								Explore everything from Processing and robotics to production design at our Los Angeles conference.
+							</p>
+							<div class="col-1 medium">
+								<img src="img/icon-redirection.png" alt="got to" width="5">
+							</div>
+							<div class="col-2">	
+								<h5 class="mono-font">
+									design.google
+								</h5>
+							</div>
+							<img src="img/awards.png" alt="">
+							<h3 class="sans">Material Design Awards 2016</h3>
+							<p>
+								Recognizing best-in-class designs from around the community
+							</p>
+							<h5 class="mono-font">
+								Editorial
+							</h5>
 						</div>
 						<div class="col-6 image-fifty">
-
+							<img src="img/design_is_never_done.jpg" alt="">
+							<h3 class="sans">Design Is Never Done</h3>
+							<p>
+								Material Design’s new suite of tools and guidelines—all in one place.
+							</p>
+							<h5 class="mono-font">Editorial</h5>
+							<br>
+							<hr>
+							<p class="medium-font-size top">
+								In celebration of the SPAN LA event, we put together a handy cheat sheet of three things you might like to know about each speaker as well as video links to all the talks.
+							</p>
+							<div class="col-2">
+								<div class="col-12">
+									<img src="img/GD17_Favicon_192.png" alt="">
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="col-12">
+									<p class="small-font-size">
+										Google Design
+										Guide to SPAN LA
+									</p>
+								</div>
+							</div>
 						</div>
 					</div>
-			
-			
-		</div>
-   
+					<div class="col-12">
+						<hr>
+					</div>
+					<footer class="row">
+						<div class="col-4">
+							<p>Google Design</p>
+							<p>
+								Google Design is a cooperative effort led by a group of designers, writers, and developers at Google. We work across teams to publish original content, produce events, and foster creative and educational partnerships that advance design and technology.
+							</p>
+						</div>
+						<div class="col-4">
+
+						</div>
+						<div class="col-4">
+
+						</div>
+					</footer>
+				</div><!--Fin section-->
     </body>
 </html>
