--- a/index.html
+++ b/index.html
@@ -393,5 +393,19 @@
 						</div>
 					</footer>
 				</div><!--Fin section-->
+Discover
+
+The Keyword
+Material Design
+Google
+Connect
+
+Newsletter
+Google+
+Twitter
+YouTube
+Facebook
+Medium
+Dribbble
     </body>
 </html>
