Maquetación con sass

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</header>
       <br>
       <div class="row">
-        <div class="col-12 gallery top">
+        <div class="col-12 image-fifty top">
           <img src="img/Method.png" alt="Method"/>
         </div>
         <div class="col-9">
@@ -378,34 +378,54 @@
 					<div class="col-12">
 						<hr>
 					</div>
-					<footer class="row">
+					<footer class="row mini-font-size top list none">
 						<div class="col-4">
-							<p>Google Design</p>
+							<p><strong>Google Design</strong></p>
+							<br>	
 							<p>
 								Google Design is a cooperative effort led by a group of designers, writers, and developers at Google. We work across teams to publish original content, produce events, and foster creative and educational partnerships that advance design and technology.
 							</p>
 						</div>
-						<div class="col-4">
+						<div class="col-1-offset col-2">
+							<ul>
+								<li><strong>Discovery</strong></li><br>
+								<li>The Keyword</li>
+								<li>Material Design</li>
+								<li>Google</li>
 
+							</ul>
 						</div>
-						<div class="col-4">
-
+						<div class="col-1-offset col-1">
+							<ul>
+								<li><strong>Conect</strong></li><br>
+								<li>Newsletter</li>
+								<li>Google+</li>
+								<li>Twitter</li>
+								<li>YouTube</li>
+							</ul>						
+						</div>
+						<div class="col-1">
+							<ul>
+								<br><br>
+								<li>Facebook</li>
+								<li>Medium</li>
+								<li>Dribbble</li>
+							</ul>
 						</div>
 					</footer>
 				</div><!--Fin section-->
-Discover
-
-The Keyword
-Material Design
-Google
-Connect
-
-Newsletter
-Google+
-Twitter
-YouTube
-Facebook
-Medium
-Dribbble
+			<hr class="top special-hr">
+			<div class="row top">
+				<div class="col-1 image-fifty">
+					<div class="col-5-offset col-8">
+						<img src="img/google-ss.png" alt="google">
+					</div>
+				</div>
+				<div class="col-9-offset col-2 small-font-size">
+					<div class="col-12">	
+						<p>Privacy & Terms</p>
+					</div>
+				</div>
+			</div>
     </body>
 </html>
